<resources>
    <string name="hp">HP</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="speed">Speed</string>
    <string name="sp_attack">Sp Atk</string>
    <string name="sp_defense">Sp Def</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="profile">Profile</string>
</resources>